--- a/assets/style.css
+++ b/assets/style.css
@@ -7,28 +7,52 @@ body {
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 50px auto 50px;
   grid-template-areas:
-    "navbar navbar"
+    "header header"
     "asside-bar main"
     "footer footer";
 }
 .navbar {
-  grid-area: navbar;
+  grid-area: header;
   text-align: center;
   background-color: aqua;
+  height: 100px;
 }
 .grid {
   grid-area: main;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 300px);
+  gap: 10% 2%;
 }
 .item {
-  border: 1px solid black;
-  padding: 3%;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 .footer {
   grid-area: footer;
   background-color: red;
   text-align: center;
+  height: 60px;
+}
+.asside-bar{
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
+  margin-top: 70px;
+}
+ul{
+  list-style: none;
+}
+img{
+  width: 80%;
+  padding: 5%;
+}
+h1,h3,p{
+  margin: 2%;
+}
+main{
+  margin-top: 70px;
+  margin-bottom: 100px;
 }
