--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ body {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: auto 100vh auto;
+  grid-template-rows: auto 100vh 23vh;
   grid-template-areas:
     "header header"
     "asside-bar main"
@@ -27,7 +27,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 300px);
-  gap: 20% 1%;
+  gap: 25% 1%;
 }
 .item {
   display: flex;
@@ -45,7 +45,7 @@ body {
   background-color: green;
   color: white;
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 15vh;
 }
 ul{
   list-style: none;
@@ -56,7 +56,7 @@ img{
   padding: 5%;
 }
 button{
-  width: 80%;
+  width: 70%;
   padding: 10px;
   background-color: green;
   color: white;
